# expert-finder-agent

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  supabase_db.py
expert_finder/: __init__.py  main.py
expert_finder/application/expert_finder/: use_case.py
expert_finder/application/expert_finder/tools/: data.py  education_search.py  work_experience_search.py
expert_finder/domain/: education_normalization.py
expert_finder/domain/models/: records.py
expert_finder/domain/ports/: repositories.py
expert_finder/expert_finder/: config.py  logging.py  main.py  path.py
expert_finder/expert_finder/agent/: expert_finder.py
expert_finder/expert_finder/db/: models.py  ports.py
expert_finder/expert_finder/db/adapters/csv/: education_repo.py  (+1 more)
expert_finder/expert_finder/llm/: gpt.py  ports.py  stub.py
expert_finder/expert_finder/llm/adapters/: gpt.py  stub.py
expert_finder/expert_finder/settings/: inf.py
expert_finder/expert_finder/tools/: data.py  education_search.py  institution_search.py  profile_compare.py  profile_retrieval.py  work_experience_search.py
expert_finder/expert_finder/types/: schemas.py
expert_finder/expert_finder/utils/: dates.py  institutions.py
expert_finder/infrastructure/: logging.py
expert_finder/infrastructure/llm/adapters/: gpt.py  stub.py
expert_finder/interfaces/cli/: main.py
scripts/: build_education_df.py  build_institutions.py  build_professional_activities_df.py  build_work_experiences_df.py  compute_linkedin_profile_coverage.py  count_university_instances.py  infisical_llm_check.py  process_education_df.py  process_work_experiences_df.py  run_sample_questions.py
scripts/shell_scripts/: grant_secret_access.sh  load_env.sh  sync_secrets.sh
src/domain/agents/: expert_finder.py
src/domain/tools/: profile_compare.py
src/expert_finder/: __init__.py
src/expert_finder/application/: __init__.py  deps.py  factory.py  service.py
src/expert_finder/config/: secrets.py  settings.py
src/expert_finder/domain/agents/: expert_finder.py
src/expert_finder/domain/models/: __init__.py  experts.py  question_logs.py  records.py
src/expert_finder/domain/ports/: __init__.py  llm.py  repositories.py
src/expert_finder/domain/tools/: __init__.py  education_search.py  profile_compare.py  work_experience_search.py
src/expert_finder/entrypoints/api/: main.py
src/expert_finder/entrypoints/cli/: main.py  presentation.py  samples.py  types.py
src/expert_finder/infrastructure/: config.py  path.py
src/expert_finder/infrastructure/settings/: inf.py
src/infrastructure/: path.py
src/infrastructure/persistence/csv/: work_experience_repo.py
tests/: test_agent.py
(+25 files in other folders)
