[project]
name = "expert-finder"
version = "0.1.0"
description = "POC for identifying subject-matter experts from a professional community."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Fabrizio Forte" }]

# Core runtime dependencies required for the application to run
dependencies = [
  "infisicalsdk==1.0.8",
  "openai>=1.0.0",
  "pandas>=3.0.0",
  "pydantic>=2.6",
  "rapidfuzz>=3.9",
  "python-dotenv==1.1.0",
]

[dependency-groups]
dev = [
  "pytest>=7.4",
]

api = [
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.22",
  "fastapi[standard]>=0.129.0",
  "uvicorn>=0.41.0",
  "sqlalchemy>=2.0.46",
  "psycopg[binary]>=3.2.10",
]

cli = [
  "typer>=0.24.0",
  "rich>=14.3.2",
]

notebooks = [
  "notebook>=7.5.3",
]

[project.scripts]
expert-finder = "expert_finder.entrypoints.cli.main:main"

[tool.pytest.ini_options]
addopts = "-q"

[tool.uv]
default-groups = ["dev"]
package = true

[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expert_finder"]
